--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,7 @@ body {
 }
 
 .app {
-    /* background-image: url("./photos/coldweather.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: bottom;
-    transition: 0.4 ease; */
-
+    overflow-y: scroll;
     position: fixed;
     top: 0;
     left: 0;
@@ -101,22 +96,10 @@ main {
 }
 
 .weather-box .temp {
-    /* position: relative;
-    display: inline-block;
-    margin: 30px auto;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-
-    padding: 15px 25px; */
-
     color: #FFF;
     font-size: 102px;
     font-weight: 500;
     text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
-
-    /* text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
-    text-align: center;
-    box-shadow: 3px 6px rgba(0, 0, 0, 0.2); */
 }
 
 .weather-box .weather {
@@ -145,40 +128,8 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
- /* @media (max-width: 770px) {
-    .weatherInfo-box {
-        width: 100%;
-    }
-} */
-
 .forcast {
     color: #FFF;
     font-size: 30px;
     padding-top: 70px;
 }
-
-
-/* Responsive */
-/* @media (min-width: 576px) {
-    .mainApp {
-        min-width: 100%;
-    }
-}
-
-@media (min-width: 768px) {
-    .mainApp {
-        min-width: 75%;
-    }
-}
-
-@media (min-width: 992px) {
-    .mainApp {
-        min-width: 50%;
-    }
-}
-
-@media (min-width: 1200px) {
-    .mainApp {
-        min-width: 25%;
-    }
-} */
